:ok_hand: @Apbielzinx ajustando DataInitializer